Commit before deploying on Heroku

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,9 +1,9 @@
 <html>
    <body>
-      <form action = "http://192.168.1.100/report" method = "POST">
+      <form action = "/report" method = "POST">
          <p>Click here to check report <input type = "submit" value = "submit" /></p>
       </form>
-      <form action = "http://192.168.1.100/showdb" method = "POST">
+      <form action = "/showdb" method = "POST">
         <p>Click here to update the purchase record <input type = "submit" value = "submit" /></p>
      </form>
    </body>
