--- a/templates/report.html
+++ b/templates/report.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
    <body>
-    <form action = "http://192.168.1.100/report" method = "POST">
+    <form action = "/report" method = "POST">
         <br>
         <table border = 5>
             {% for row in mf_data%}
