--- a/templates/update.html
+++ b/templates/update.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
    <body>
-    <form action = "http://192.168.1.100/update" method = "POST">
+    <form action = "/update" method = "POST">
         <br>
         <table border = 5>
             {% for row in cursor%}
