--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,25 @@
+<!doctype html>
 <html>
    <body>
-      <form action = "/login" method = "POST">
-         <p>PASSWORD <input type = "password" name = "nm" /><input type = "submit" value = "submit" /></p>
+   
+      <h1>Login</h1>
+      
+      {% if error %}
+      <p><strong>Error:</strong> {{ error }}
+      {% endif %}
+      
+      <form action = "/login" method = post>
+         <dl>
+            <dt>Username:</dt>
+            <dd>
+               <input type = text name = username 
+                  value = "{{request.form.username }}">
+            </dd>
+            <dt>Password:</dt>
+            <dd><input type = password name = password></dd>
+         </dl>
+         <p><input type = submit value = Login></p>
       </form>
+      
    </body>
 </html>
