added back button on reports and bug fixes

--- a/templates/report.html
+++ b/templates/report.html
@@ -16,5 +16,6 @@
             {% endfor %}
         </table>
      </table>
+     <p><a href = "{{ url_for('home') }}"><b>BACK</b></a>
    </body>
 </html>
