--- a/templates/update.html
+++ b/templates/update.html
@@ -16,5 +16,6 @@
         </table>
         <input type = "submit" value = "submit" /></p>
      </table>
+     <p><a href = "{{ url_for('home') }}"><b>BACK</b></a>
    </body>
 </html>
