--- a/templates/home.html
+++ b/templates/home.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html>
-   
    <head>
       <title>Welcome to sumit website</title>
    </head>
    <body>
-      <p><a href = "{{ url_for('index') }}"><b>logout?</b></a>
+      <center>
+      <h1>Welcome to Sumit's Mutual Fund Tracker</h1>
       {% with messages = get_flashed_messages() %}
          {% if messages %}
             <ul>
@@ -16,10 +16,10 @@
          {% endif %}
       {% endwith %}
       </p>
-      <h1>Welcome to flask website</h1>
-      <p>To generate report, Please <a href = "{{ url_for('report') }}">
-         <b>click here</b></a></p>
-      <p>To update database <a href = "{{ url_for('show_db') }}">
-         <b>click here</b></a></p>
-   </body>
+      <p><a href = "{{ url_for('report') }}"><img src="static/images/report.png"/></a>
+         <a href = "{{ url_for('show_db') }}"><img src="static/images/update.png"/></a>
+      </p>
+      <p><a href = "{{ url_for('index') }}"><img src="static/images/logout.png"/></a></p>
+      </center>
+      </body>
 </html>
