--- a/static/css/general.css
+++ b/static/css/general.css
@@ -1,4 +1,4 @@
-    * {
+* {
     box-sizing: border-box;
     }
      
@@ -7,7 +7,7 @@
     }
     body {
     font-family: Arial;
-    background-color: #3498DB;
+    background-color:  #ffffff;
     padding: 50px;
     }
     .login {
