--- a/templates/login.html
+++ b/templates/login.html
@@ -1,30 +1,37 @@
-<!doctype html>
-<html>
-   <body>
-         <center>
-      <form action = "/login" method = post>
-            <table style="width: 500px;"><tr><td align="center" valign="top">
-            <tr><h3>Login Page</h3></tr>
-            <tr>
-                  <td>Username:</td>
-                  <td><input type = text name = username></td>
-            </tr>
-            <tr>
-                  <td>Password</td>
-                  <td><input type = password name = password></td>
-            </tr>
-            <tr>
-                  <td>
-                  {% if error %}
-                  <P><strong>Error:</strong> {{ error }}
-                  {% endif %}
-                  </td>
-                  <td>
-                  <input type = "image" value = "Login" src="static\images\login.png" width="100" height="30" alt="Login"> 
-                  </td>
-            </tr>
-            </table>
-      </form>
-      </center>
-   </body>
-</html>
+<link rel="stylesheet" href="/static/css/main.css" type="text/css">
+{% block body %}
+{% if session['logged_in'] %}
+<p>You're logged in already!</p>
+{% else %}
+ 
+ 
+<form action="/login" method="POST">
+	<div class="login">
+		<div class="login-screen">
+			<div class="app-title">
+				<h1>Login</h1>
+			</div>
+			{% if error %}
+			<div class="app-title">
+				<h4>Invalid Username or Password</h4>
+			</div>
+			{% endif %}
+			<div class="login-form">
+				<div class="control-group">
+				<input type="text" class="login-field" value="" placeholder="username" name="username">
+				<label class="login-field-icon fui-user" for="login-name"></label>
+				</div>
+ 
+				<div class="control-group">
+				<input type="password" class="login-field" value="" placeholder="password" name="password">
+				<label class="login-field-icon fui-lock" for="login-pass"></label>
+				</div>
+				<input type="submit" value="Log in" class="btn btn-primary btn-large btn-block" >
+			    <br>
+			</div>
+		</div>
+	</div>
+</form>
+ 
+{% endif %}
+{% endblock %}
