--- a/templates/report.html
+++ b/templates/report.html
@@ -11,27 +11,35 @@
             {% endif %}
             </h1>
         <table border = 5>
+            <thead>
+                <tr>
+                    <th>MUTUAL FUND NAME</th>
+                    <th>NAV</th>
+                    <th>UNITS</th>
+                    <th>COST</th>
+                    <th>VALUE</th>
+                    <th>PROFIT/LOSS</th>
+                </tr>
+            </thead>
             {% for row in mf_data%}
                <tr>
-                  <th> {{ row[0] }} </th>
-                  <td> {{ row[1] }} </td>
-                  <td> {{ row[2] }} </td>
-                    <td> 
-                        {% if row[3] == "COST" %}{{ row[3] }}
-                        {% else %} &#x20a8; {{ row[3] }}
-                        {% endif %} 
-                    </td>
-                    <td> 
-                        {% if row[4] == "VALUE" %}{{ row[4] }}
-                        {% else %} &#x20a8; {{ row[4] }}
-                        {% endif %} 
-                    </td>
-                  <td>
-                        {% if row[5] == "PROFIT/LOSS" %}{{ row[5] }}
-                        {% elif row[5]|float < 0.0 %}<font color="red"><b>&#x20a8; {{ row[5] }}</b></font>
+                  <th align="left"> {{ row[0] }} </th>
+                  <td align="left"> {{ row[1] }} </td>
+                  {% if row[0] == "" %}
+                    <td align="right"><b>{{ row[2] }}</b></td>
+                    <td align="left"><b>&#x20a8; {{ row[3] }}</b></td>
+                    <td align="left"><b> &#x20a8; {{ row[4] }}</b></td>
+                  {% else %}
+                  <td align="left"> {{ row[2] }} </td>
+                  <td align="left"> &#x20a8; {{ row[3] }}</td>
+                  <td align="left"> &#x20a8; {{ row[4] }}</td>
+                  {% endif %}
+                  <td align="left">
+                        {% if row[5]|float < 0.0 %}<font color="red"><b>&#x20a8; {{ row[5] }}</b></font>
                         {% else %}<font color="green"><b>&#x20a8; {{ row[5] }}</b></font>
                         {% endif %}
                   </td>
+                </b>
                </tr>
             {% endfor %}
         </table>
